# egg-file-format

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORMAT.md  README.md  ROADMAP.md  SECURITY.md  agents.md  egg_cli.py  format.md  pyproject.toml  requirements-dev.txt  security.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
egg/: __init__.py  chunker.py  composer.py  constants.py  hashing.py  manifest.py  precompute.py  runtime_fetcher.py  sandboxer.py  utils.py
examples/: advanced.R  advanced.py  advanced_manifest.yaml  dozen_manifest.yaml  hello.R  hello.go  hello.lua  hello.pl  hello.py  hello.rb  hello.tcl  hello_agent.py  julia_manifest.yaml  manifest.yaml  ruby_plugin.py  say.sh
scripts/: update_badges.py
tests/: __init__.py  test_chunker.py  test_cli.py  test_composer.py  test_examples.py  test_hashing.py  test_manifest.py  test_meta.py  test_precompute_extra.py  test_runtime_fetcher.py  test_runtime_fetcher_extra.py  test_runtime_fetcher_more.py  test_sandboxer.py  test_sandboxer_extra.py  test_utils.py
