[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "egg-file-format"
version = "0.1.0"
authors = [{ name = "egg contributors" }]
readme = "README.md"
description = "CLI tools for the egg file format"
requires-python = ">=3.8"
dependencies = ["PyYAML>=6"]
license = { text = "MIT" }
classifiers = ["License :: OSI Approved :: MIT License"]

[project.scripts]
egg = "egg_cli:main"

[tool.setuptools]
packages = ["egg"]
py-modules = ["egg_cli"]
