[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "egg-file-format"
version = "0.1.0"
authors = [{ name = "egg contributors" }]
readme = "README.md"
description = "CLI tools for the egg file format"
requires-python = ">=3.8"
dependencies = ["PyYAML>=6"]
license = "MIT"

[project.scripts]
egg = "egg_cli:main"

[project.entry-points."egg.agents"]
hello = "examples.hello_agent:register"

[project.entry-points."egg.runtimes"]
ruby = "examples.ruby_plugin:register"

[tool.setuptools]
packages = ["egg"]
py-modules = ["egg_cli"]
